--- a/MercadonaApp/.project
+++ b/MercadonaApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MercadonaApp</name>
+	<name>MercadonaPersonal</name>
 	<comment></comment>
 	<projects>
 	</projects>
